added test for food service and delete method to User_Foods